--- a/index.html
+++ b/index.html
@@ -1489,8 +1489,7 @@
       <div class="article-style">
         安装macports 安装过程中，会停止，按option-command+esc强制关闭。
 升级macports sudo port -v selfupdate 出错，修改~\opt\local\etc\macports\sources.conf
-将最后一句用#注释掉，
-rsync://rsync.macports.org/macports/release/tarballs/ports.tar [default] 并换成 https://distfiles.macports.org/ports.tar.gz [default]
+将最后一句用#注释掉， rsync://rsync.macports.org/macports/release/tarballs/ports.tar [default] 并换成 https://distfiles.macports.org/ports.tar.gz [default]
 然后再运行 sudo port -v selfupdate可以升级
 安装Hugo 在Terminal安装Hugo，会提示安装go sudo port install hugo
 sudo port uninstall hugo
