--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
   
 
   
-  <section id="experience" class="home-section wg-experience  "  >
+  <section id="bak_experience" class="home-section wg-experience  "  >
    <div class="home-section-bg " ></div>
     <div class="container">
 
@@ -1256,7 +1256,7 @@
   
 
   
-  <section id="accomplishments" class="home-section wg-accomplishments  "  >
+  <section id="bak_accomplishments" class="home-section wg-accomplishments  "  >
    <div class="home-section-bg " ></div>
     <div class="container">
 
